# crustabri_ipafair

./: CHANGELOG.md  Cargo.toml  README.md
python/: crustabri.py  crustabri_dummy.py
src/: ipafair_solver.rs  lib.rs
