[package]
name = "crustabri_ipafair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
const-cstr = "0.3.0"
crustabri = {path = "../crustabri"}
ipafair-sys = {path = "../ipafair-sys"}
