[package]
name = "crustabri_ipafair"
authors = ["Jean-Marie Lagniez <lagniez@cril.fr>", "Emmanuel Lonca <lonca@cril.fr>", "Jean-Guy Mailly <jean-guy.mailly@u-paris.fr>"]
license = "GPL-3.0-or-later"
version = "1.1.0"
description = "An IPAFAIR compatible library built upon the Crustabri solver."
categories = ["api-bindings", "science"]
keywords = ["argumentation", "frameworks", "AF", "dynamics", "IPAFAIR"]
repository = "https://github.com/crillab/crustabri_ipafair"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
const-cstr = "0.3.0"
crustabri = "1.1"
ipafair-sys = "1.0"
